# extrair-dados-site

./: extract_table.py  pyproject.toml
